--- a/index.html
+++ b/index.html
@@ -614,123 +614,166 @@
     </div>
 
     <div class="page-section">
-        <div class="table-container">
-            <table class="blueTable">
-                <col class="small-column">
-                <col class="medium-column">
-                <col class="medium-column">
-                <col class="large-column">
-                <col class="small-column">
-                <col class="medium-column">
-                <col class="medium-column">
-                <col class="small-column">
-                <col class="medium-column">
-                <col class="small-column">
-                <thead>
-                    <tr>
-                        <th>File Type</th>
-                        <th>Name</th>
-                        <th>Tags</th>
-                        <th>Description</th>
-                        <th>File Size</th>
-                        <th>Creation Date</th>
-                        <th>Availability</th>
-                        <th>Comments</th>
-                        <th>Rating</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>PDF</td>
-                        <td>Privacy Guidelines</td>
-                        <td><tag>Handbook</tag>
-                            <tag>Onboarding</tag></td>
-                        <td>All new teachers and staff members should make themsleves familiar with our privacy guidelines. You will learn what types of data are sensitive data and how they need to be handled.</td>
-                        <td>5.8 MB</td>
-                        <td>27. May 2022</td>
-                        <td>available until 27.09.2022</td>
-                        <td>0</td>
-                        <td><div><span class="il-item-property-value"><img class="ilRatingIcon" src="img/icon_rate_on.svg"
-                            alt=""><img class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img class="ilRatingIcon"
-                            src="img/icon_rate_on.svg" alt=""><img class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img
-                            class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""></span></div></td>
-                        <td><div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span
-                                    class="caret"></span></button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                            </ul>
-                        </div></td>
-                    </tr>
-                    <tr>
-                        <td>PPT</td>
-                        <td>Uploading Course Material to ILIAS</td>
-                        <td>
-                            <tag>Teacher</tag>
-                            <tag>Onboarding</tag>
-                        </td>
-                        <td>A comprehensive step by step guide how and where to upload learning materials for your students.</td>
-                        <td>10.4 MB</td>
-                        <td>12. October 2019</td>
-                        <td>10.01.2019 - 31.04.2019</td>
-                        <td>0</td>
-                        <td>
-                            <div><span class="il-item-property-value"><img class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img
-                                        class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img class="ilRatingIcon"
-                                        src="img/icon_rate_on.svg" alt=""><img class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img
-                                        class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""></span></div>
-                        </td>
-                        <td>
-                            <div class="dropdown">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
-                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                </ul>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>PNG</td>
-                        <td>University Logo</td>
-                        <td></td>
-                        <td>The university logo in high resolution.</td>
-                        <td>460 KB</td>
-                        <td>14. November 2022</td>
-                        <td>open</td>
-                        <td>3</td>
-                        <td>
-                            <div><span class="il-item-property-value"><img class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img
-                                        class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img class="ilRatingIcon"
-                                        src="img/icon_rate_on.svg" alt=""><img class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img
-                                        class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""></span></div>
-                        </td>
-                        <td>
-                            <div class="dropdown">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
-                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                </ul>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="mockup-page-layout">
+            <div class="mockup-mainbar"></div>
+            <div class="mockup-slate">
+                <div class="dropdown">
+                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      Files
+                      <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                      <li><a href="#">Action</a></li>
+                      <li><a href="#">Another action</a></li>
+                      <li><a href="#">Something else here</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="#">Separated link</a></li>
+                    </ul>
+                  </div>
+                  <h3>
+                      Visible Columns
+                  </h3>
+                  <div class="form-group">
+                      <input type="checkbox" id="filetype" name="filetype" checked><label for="filetype">File Type</label>
+                      <input type="checkbox" id="title" name="title" checked><label for="title">Title</label>
+                      <input type="checkbox" id="tags" name="tags" checked><label for="tags">Tags</label>
+                      <input type="checkbox" id="description" name="description" checked><label for="description">Description</label>
+                      <input type="checkbox" id="filesize" name="filesize" checked><label for="filesize">File Size</label>
+                      <input type="checkbox" id="creationdate" name="creationdate" checked><label for="creationdate">Creation Date</label>
+                    </div>
+                  
+            </div>
+            <div class="mockup-page-content">
+                <div class="il-panel">
+                    <div class="il-panel-header">
+                        <div class="il-panel-header-icon"><img src="img/icon_file_inline.svg" alt=""></div>
+                        <div class="il-panel-header-headline">
+                            <h3>Files</h3>
+                        </div>
+                        <button type="button" class="btn btn-primary">
+                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> View Options
+                            </button>
+                    </div>
+                <div class="table-container">
+                    <table class="blueTable">
+                        <col class="small-column">
+                        <col class="medium-column">
+                        <col class="medium-column">
+                        <col class="large-column">
+                        <col class="small-column">
+                        <col class="medium-column">
+                        <col class="medium-column">
+                        <col class="small-column">
+                        <col class="medium-column">
+                        <col class="small-column">
+                        <thead>
+                            <tr>
+                                <th>File Type</th>
+                                <th>Name</th>
+                                <th>Tags</th>
+                                <th>Description</th>
+                                <th>File Size</th>
+                                <th>Creation Date</th>
+                                <th>Availability</th>
+                                <th>Comments</th>
+                                <th>Rating</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>PDF</td>
+                                <td>Privacy Guidelines</td>
+                                <td><tag>Handbook</tag>
+                                    <tag>Onboarding</tag></td>
+                                <td>All new teachers and staff members should make themsleves familiar with our privacy guidelines. You will learn what types of data are sensitive data and how they need to be handled.</td>
+                                <td>5.8 MB</td>
+                                <td>27. May 2022</td>
+                                <td>available until 27.09.2022</td>
+                                <td>0</td>
+                                <td><div><span class="il-item-property-value"><img class="ilRatingIcon" src="img/icon_rate_on.svg"
+                                    alt=""><img class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img class="ilRatingIcon"
+                                    src="img/icon_rate_on.svg" alt=""><img class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img
+                                    class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""></span></div></td>
+                                <td><div class="dropdown">
+                                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span
+                                            class="caret"></span></button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                        <li><a href="#">Action</a></li>
+                                        <li><a href="#">Another action</a></li>
+                                        <li><a href="#">Something else here</a></li>
+                                        <li role="separator" class="divider"></li>
+                                        <li><a href="#">Separated link</a></li>
+                                    </ul>
+                                </div></td>
+                            </tr>
+                            <tr>
+                                <td>PPT</td>
+                                <td>Uploading Course Material to ILIAS</td>
+                                <td>
+                                    <tag>Teacher</tag>
+                                    <tag>Onboarding</tag>
+                                </td>
+                                <td>A comprehensive step by step guide how and where to upload learning materials for your students.</td>
+                                <td>10.4 MB</td>
+                                <td>12. October 2019</td>
+                                <td>10.01.2019 - 31.04.2019</td>
+                                <td>0</td>
+                                <td>
+                                    <div><span class="il-item-property-value"><img class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img
+                                                class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img class="ilRatingIcon"
+                                                src="img/icon_rate_on.svg" alt=""><img class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img
+                                                class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""></span></div>
+                                </td>
+                                <td>
+                                    <div class="dropdown">
+                                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
+                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                            <li><a href="#">Action</a></li>
+                                            <li><a href="#">Another action</a></li>
+                                            <li><a href="#">Something else here</a></li>
+                                            <li role="separator" class="divider"></li>
+                                            <li><a href="#">Separated link</a></li>
+                                        </ul>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>PNG</td>
+                                <td>University Logo</td>
+                                <td></td>
+                                <td>The university logo in high resolution.</td>
+                                <td>460 KB</td>
+                                <td>14. November 2022</td>
+                                <td>open</td>
+                                <td>3</td>
+                                <td>
+                                    <div><span class="il-item-property-value"><img class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img
+                                                class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img class="ilRatingIcon"
+                                                src="img/icon_rate_on.svg" alt=""><img class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""><img
+                                                class="ilRatingIcon" src="img/icon_rate_on.svg" alt=""></span></div>
+                                </td>
+                                <td>
+                                    <div class="dropdown">
+                                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
+                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                            <li><a href="#">Action</a></li>
+                                            <li><a href="#">Another action</a></li>
+                                            <li><a href="#">Something else here</a></li>
+                                            <li role="separator" class="divider"></li>
+                                            <li><a href="#">Separated link</a></li>
+                                        </ul>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
