mockup for devconf

--- a/new-item-card-structure/index.html
+++ b/new-item-card-structure/index.html
@@ -16,7 +16,7 @@
             <div class="il-c-item">
                 <div class="il-c-obj__main-identifier-1">
                     <div class="il-l-section-bar">
-                        <div class="il-l-element__title"><a href="#">Name of a very interesting course</a></div>
+                        <div class="il-l-element__title"><a href="#">Example Course</a></div>
                     </div>
                 </div>
                 <div class="il-c-obj__main-identifier-2">
@@ -32,14 +32,14 @@
                 </div>
                 <div class="il-c-obj__properties__content-info">
                     <div class="il-l-section-bar il-l-section-bar--large-gap">
-                        <div class="il-l-element__larger-highlight">27. August 2022</div>
+                        <div class="il-l-element__larger-highlight">until 20. September</div>
                         <div class="il-l-section-bar">
                             <div class="il-c-progress-meter-horizontal__bar"></div>
-                            <div class="il-c-progress-meter-horizontal__label">80% completed</div>
+                            <div class="il-c-progress-meter-horizontal__label il-l-element__larger-highlight">0% completed</div>
                         </div>
                     </div>
                     <div class="il-l-section">
-                        <div>
+                        <div class="il-c-obj__properties__description">
                             A highly interesting course with many fascinating points about extremely interesting topics. This truly is a course meant for all ages to broaden their education. This description doesn't really do it justice so please check it out.
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="il-c-obj__properties__meta-data">
                     <div class="il-l-section-bar il-l-section-bar--large-gap">
-                        <div>available until December 2022</div>
+                        <div>available until 31. December</div>
                         <div class="il-l-section-bar">
                             <div><tag>Introduction</tag></div>
                             <div><tag>Webdesign</tag></div>
